2009-02-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/pm3d.c (pm3d_plot) src/set.c (set_pm3d):
	Let "pm3d interpolate m,n" for negative m,n interpolates the surface
	for at least |m|, |n| points. The case m=n=0 means an optimal number
	of interpolation points.
	SF Patch #2558565: pm3d interpolate 0,0

2009-02-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/eval.c (update_gpval_variables) src/command.c (changedir_command)
	docs/gnuplot.doc: New automatic variable GPVAL_PWD for current working
	directory.

2009-02-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (lookup_key): Use exact match, otherwise F10, F11, or F12
	hotkeys bind to F1.

2009-02-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary do_plot): Move test for colorbox outside of
	boundary(), and only calculate placement of colorbox once.
	Bugfix.

	* term/canvas.trm: Taking the URL for associated javascripts from an
	environmental variable turns out to be less than useful if the scripts
	are tailored to the individual plots. Add a terminal option instead:
	    set term canvas mouse jsdir 'URL/for/javascripts/'

2009-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (define): Fix under-allocation of space for user
	variables named GPFUN_*.

2009-01-31  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Update documentation: user functions can have
	up to 12 variables.

	* src/fit.c (fit_command): Allow second independent variable to be
	renamed in a fit command.

2009-01-30  James R. Van Zandt  <jrvz@comcast.net>

	* src/command.c (define): save a function definition in a
	user-accessible variable

2009-01-28  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* term/emf.trm (GP_TA_NOUPDATECP, GP_TA_UPDATECP, GP_TA_LEFT)
	(GP_TA_RIGHT, GP_TA_CENTER, GP_TA_TOP, GP_TA_BOTTOM)
	(GP_TA_BASELINE): Added a GP_ prefix to avoid collision between
	these and the actual Windows API macros of the same names.
