@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: fit.c,v 1.66 2009/01/31 16:13:54 vanzandt Exp $"); }
+static char *RCSid() { return RCSid("$Id: fit.c,v 1.67 2009/02/05 17:12:33 sfeam Exp $"); }
 #endif
 
 /*  NOTICE: Change of Copyright Status
@@ -1539,7 +1539,7 @@ fit_command()
 	viafile = try_to_get_string();	/* Cannot fail since isstringvalue succeeded */
 	fprintf(log_f, "fitted parameters and initial values from file: %s\n\n", viafile);
 	if (!(f = loadpath_fopen(viafile, "r")))
-	    Eex2("could not read parameter-file %s", sstr);
+	    Eex2("could not read parameter-file \"%s\"", viafile);
 
 	/* get parameters and values out of file and ignore fixed ones */
 
